# RealAntSim

./: .gitignore  BENCHMARK.md  Cargo.toml  DESIGN.md  GPU_PLAN.md  README.md
assets/: neural_worker_weights.json
backend/: Cargo.toml
backend/src/: brain.rs  brains.rs  command.rs  entities.rs  main.rs  pheromone.rs  protocol.rs  world.rs
frontend/: index.html
tools/: optimize_neural_rollout.py  sweep_weighted.py  train_neural_worker.py
