[package]
name = "ant-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.29"
rand = { version = "0.8", features = ["small_rng"] }
base64 = "0.22"
rayon = "=1.10.0"
